<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".screens.changepassword.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back_outline_curve">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textColor="@color/color_black"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            android:textColorHint="@color/light_black"
            android:backgroundTint="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/color_black"
            android:hint="@string/confirm_password"
            android:layout_margin="5dp"
            android:textColorHint="@color/light_black"
            android:backgroundTint="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            style="@style/button_style"
            android:text="@string/submit"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>